aks/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tripinsights-frontend  
---
apiVersion: v1
kind: Namespace
metadata:
  name: tripinsights-backend
