aks/poi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: tripinsights-backend
  labels:
    deploy: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - image: "registryltt9233.azurecr.io/danshue/poi:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        name: poi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: tripinsights-backend
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi-ingress
  namespace: tripinsights-backend  
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-tripinsights-danshue.28e397100e3e4f238d77.westus2.aksapp.io
    http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service: 
            name: poi
            port: 
              number: 80
