aks/user-java.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: tripinsights-backend
  labels:
    deploy: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - image: "registryltt9233.azurecr.io/danshue/user-java:latest"

        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true

        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        name: user-java
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: sql-creds                        
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: tripinsights-backend
spec:
  type: ClusterIP
  selector:
    app: user-java
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-java-ingress
  namespace: tripinsights-backend  
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-tripinsights-danshue.28e397100e3e4f238d77.westus2.aksapp.io
    http:
      paths:
      - path: /api/user-java
        pathType: Prefix
        backend:
          service: 
            name: user-java
            port: 
              number: 80
